Añadiendo Los Destinos

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2>Destinos</h2>
         <div class="destino">
             <a href="destino1.html">
-                <img src="destino1.jpg" alt="Destino 1">
+                <img src="https://cdn.yate.co/img/blog/2023/13/guatape-negx640.jpg" alt="Destino 1">
             </a>
         </div>
         <div class="destino">
@@ -33,7 +33,27 @@
                 <img src="destino2.jpg" alt="Destino 2">
             </a>
         </div>
-        <!-- Repetir para los 6 destinos -->
+        <div class="destino">
+            <a href="destino3.html">
+                <img src="destino3.jpg" alt="Destino 3">
+            </a>
+        </div>
+        <div class="destino">
+            <a href="destino4.html">
+                <img src="destino4.jpg" alt="Destino 4">
+            </a>
+        </div>
+        <div class="destino">
+            <a href="destino5.html">
+                <img src="destino5.jpg" alt="Destino 5">
+            </a>
+        </div>
+        <div class="destino">
+            <a href="destino6.html">
+                <img src="destino6.jpg" alt="Destino 6">
+            </a>
+        </div>
+        
     </section>
     <footer>
         <p>Desarrollado por: [Andrés Felipe Rendón Villada]</p>
