Se Añade Icono A La Pagina

--- a/Destino6.html
+++ b/Destino6.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destino 6 - Venecia</title>
+    <link rel="icon" href="https://img.icons8.com/cotton/64/000000/earth-planet--v1.png" type="image/png">
+    <meta name="description" content="Sitio web de Travel Partners, una agencia de turismo especializada en ofrecer experiencias únicas alrededor del mundo.">
+    <meta name="keywords" content="turismo, viajes, destinos, experiencias, agencia de viajes">
+    <meta name="author" content="[Tu Nombre]">
 </head>
 <body>
     <header>
