Se Añaden Opciones De Navegacion En Las Paginas De Los Destinos

--- a/Destino5.html
+++ b/Destino5.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://img.icons8.com/cotton/64/000000/earth-planet--v1.png" type="image/png">
     <meta name="description" content="Sitio web de Travel Partners, una agencia de turismo especializada en ofrecer experiencias únicas alrededor del mundo.">
     <meta name="keywords" content="turismo, viajes, destinos, experiencias, agencia de viajes">
-    <meta name="author" content="[Tu Nombre]">
+    <meta name="author" content="[Andrés Felipe Rendón Villada]">
 </head>
 <body>
     <header>
