--- a/Destino6.html
+++ b/Destino6.html
@@ -8,18 +8,26 @@
     <link rel="icon" href="https://img.icons8.com/cotton/64/000000/earth-planet--v1.png" type="image/png">
     <meta name="description" content="Sitio web de Travel Partners, una agencia de turismo especializada en ofrecer experiencias únicas alrededor del mundo.">
     <meta name="keywords" content="turismo, viajes, destinos, experiencias, agencia de viajes">
-    <meta name="author" content="[Tu Nombre]">
+    <meta name="author" content="[Andrés Felipe Rendón Villada]">
 </head>
 <body>
     <header>
         <h1>Venecia</h1>
         <img src="https://tourismmedia.italia.it/is/image/mitur/1600X900_venezia_san_marco_gabbiano-2?wid=1600&hei=900&fit=constrain,1&fmt=webp" width="200" height="121" alt="Destino 6">
     </header>
-    <section id="descripcion">
+    <nav>
+        <ul>
+            <li><a href="#Decripcion">Descripcion</a></li>
+            <li><a href="#Atractivos">Atractivos</a></li>
+            <li><a href="#Itinerario">Itinerario</a></li>
+            <li><a href="#Costos">Destinos</a></li>
+        </ul>
+    </nav>
+    <section id="Descripcion">
         <h2>Descripción</h2>
         <p>Venecia, la capital de la región de Véneto en el norte de Italia, abarca más de 100 islas pequeñas en una laguna del mar Adriático. No tiene caminos, sino solo canales, incluida la vía pública del Gran Canal, bordeada de palacios renacentistas y góticos. En la plaza central de San Marcos, se encuentra la basílica de San Marcos, que tiene un suelo de mosaicos bizantinos, y el campanario Campanile con vista a los techos rojos de la ciudad.</p>
     </section>
-    <section id="atractivos">
+    <section id="Atractivos">
         <h2>Atractivos</h2>
         <ul>
             <li>
@@ -33,7 +41,7 @@
 
         </ul>
     </section>
-    <section id="itinerario">
+    <section id="Itinerario">
         <h2>Itinerario</h2>
         <p>Itinerario de ejemplo para 5 días y 4 noches en el destino.</p>
         <ul>
@@ -54,7 +62,7 @@
             </li>
         </ul>
     </section>
-    <section id="costos">
+    <section id="Costos">
         <h2>Costos</h2>
         <p>Costos de viaje, traslados, hospedajes, entradas a sitios turísticos, alimentacion : 12.000.000 COP.</p>
     </section>
