--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#acerca-de">Acerca de nosotros</a></li>
-            <li><a href="#destinos">Destinos</a></li>
+            <li><a href="#Acerca-de">Acerca de nosotros</a></li>
+            <li><a href="#Destinos">Destinos</a></li>
         </ul>
     </nav>
-    <section id="acerca-de">
+    <section id="Acerca-de">
         <h2>Acerca de nosotros</h2>
         <p>Travel Partners es una agencia de turismo especializada en ofrecer experiencias únicas alrededor del mundo.</p>
     </section>
-    <section id="destinos">
+    <section id="Destinos">
         <h2>Destinos</h2>
         <div class="destino">
             <header>
