--- a/Destino1.html
+++ b/Destino1.html
@@ -8,14 +8,22 @@
     <link rel="icon" href="https://img.icons8.com/cotton/64/000000/earth-planet--v1.png" type="image/png">
     <meta name="description" content="Sitio web de Travel Partners, una agencia de turismo especializada en ofrecer experiencias únicas alrededor del mundo.">
     <meta name="keywords" content="turismo, viajes, destinos, experiencias, agencia de viajes">
-    <meta name="author" content="[Tu Nombre]">
+    <meta name="author" content="[Andrés Felipe Rendón Villada]">
 </head>
 <body>
     <header>
         <h1>Guatape</h1>
         <img src="https://cdn.yate.co/img/blog/2023/13/guatape-negx640.jpg" width="200" height="121" alt="Destino 1">
     </header>
-    <section id="descripcion">
+    <nav>
+        <ul>
+            <li><a href="#Decripcion">Descripcion</a></li>
+            <li><a href="#Atractivos">Atractivos</a></li>
+            <li><a href="#Itinerario">Itinerario</a></li>
+            <li><a href="#Costos">Destinos</a></li>
+        </ul>
+    </nav>
+    <section id="Descripcion">
         <h2>Descripción</h2>
         <p>Guatapé es un municipio turístico de los Andes al noroeste de Colombia y al este de Medellín. 
             Es famoso por sus casas decoradas con bajorrelieves de colores. 
@@ -23,7 +31,7 @@
             La Piedra del Peñol es una roca de granito gigante que se encuentra al sudoeste de la localidad y que dispone 
             de una larga escalera hasta su cima, en la que se puede disfrutar de una vista panorámica de la zona.</p>
     </section>
-    <section id="atractivos">
+    <section id="Atractivos">
         <h2>Atractivos</h2>
         <ul>
             <li>
@@ -37,7 +45,7 @@
 
         </ul>
     </section>
-    <section id="itinerario">
+    <section id="Itinerario">
         <h2>Itinerario</h2>
         <p>Itinerario de ejemplo para 5 días y 4 noches en el destino.</p>
         <ul>
@@ -58,7 +66,7 @@
             </li>
         </ul>
     </section>
-    <section id="costos">
+    <section id="Costos">
         <h2>Costos</h2>
         <p>Costos de viaje, traslados, hospedajes, entradas a sitios turísticos, alimentacion es: 3.500.000 COP.</p>
     </section>
